--- a/sass/components/_heart.scss
+++ b/sass/components/_heart.scss
@@ -56,6 +56,8 @@
         position: relative;
         left: 260px;
         bottom: 40px;
+        height: 10px;
+        width: 10px;
     }
 
 
